--- a/EurekaService-1/pom.xml
+++ b/EurekaService-1/pom.xml
@@ -24,6 +24,20 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+        <dependency>
+           <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <dependency>
+           <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+            
+        </dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
